@@ -18,6 +18,8 @@
 	ADDED - Cacti plugin allows setting of map-global variables in the management UI
 	ADDED - Cacti plugin allows settings of global map-global (across all maps) variables too
 	ADDED - Cacti plugin adds links in 'user' pages to management screen (if you are an admin)
+	ADDED - HTMLSTYLESHEET keyword allows you to specify a URL for a CSS stylesheet (CLI tool only)
+	ADDED - A few extra CSS id and class attributes, to make styling the page easier.
 	CHANGE - Cacti plugin uses "processed" map title now (allows {} tokens in the title)
 	CHANGE - A NODE with no POSITION is not drawn, instead of drawn at 0,0. Useful for templates.
 	CHANGE - A LINK with no NODES is no longer an error. Also for templates.
@@ -28,6 +30,7 @@
 	FIXED - DEFAULT SCALE covers 0-100 properly (Thanks Dan Fusselman)
 	FIXED - Scaled ICON in DEFAULT didn't get overwritten properly in nodes (Thanks Fabrizio Carusi)
 	FIXED - No more floating-point imagemap coords (Thanks Trond Aspelund)
+	FIXED - SNMP datasource should work with Windows SNMP again
 		
 0.95b	FIXED - SQL schema issue that upset some mysql versions
 	FIXED - Removed sometime-problem debugging code in editor
